
    Internal breaking changes :
    ---------------------------
    (they should not cause problem if you have not deeply modified the source code of Creme)

        # In 'creme_core.auth.backend', the constants '_*_PREFIX' have been removed.
        # The method 'creme_core.models.CremeModel._delete_stored_file()' is not static anymore.
        # Apps :
            * Creme_config :
                - The class 'bricks.ButtonMenuBrick' (& its template) has been heavily reworked.
                - In 'core.exporters', the class 'CellsExporterMixin' & the function 'dump_ct()' have been removed.
                - The function 'core.importers.load_ct()' has been removed.
                - In the class 'function_fields.TemplateBaseVerboseStatusField',
                  the attribute "_cache" has been replaced by "_statuses_per_model".
                - The views to configurate buttons (& their URL patterns & names) have been heavily reworked.


== Version 2.6 ==

  UPGRADE NOTES :
    - You should create a all new virtual environment based on Python 3.8+ (as usual).
    - Some MariaDB users encountered errors when running migrations.
      The following workaround has worked for them:
      First, try to run the migrations again (as long as the error is a new one).
      It the same error is raised, get the raw SQL code with the command <creme sqlmigrate --settings=... app_label migration_name>
      (with the name of the migration which fails of course), then execute line after line the SQL commands in a MariaDB shell.
      You will get errors for things which have already be done, it's OK; then, you can run the command 'migrate' again.

  Users side :
  ------------
    # A notification system has been added. The notifications are sent to channels, and users can configure
      them in order to their notifications are displayed in the browser and/our received by emails.
        - A new job which sends notification emails has been created.