@@ -32,6 +32,7 @@
       <a href="{% url 'creme_core__create_hfilter' ctype.id %}">
           {% widget_icon name='add' label=_('Create a custom view') size='listview-filter-action' %}
       </a>
+{% comment %}
       <a href="{{selected.get_edit_absolute_url}}" data-action="redirect" class="{% if not can_edit %}is-disabled{% endif %}">
           {% widget_icon name='edit' label=_('Edit this view') size='listview-filter-action' %}
       </a>
@@ -39,6 +40,26 @@
           {% widget_icon name='delete' label=_('Delete this custom view') size='listview-filter-action' %}
           {% blockjsondata class='listview-action-data' %}{"data": {"id": "{{selected.id}}"}}{% endblockjsondata %}
       </a>
+{% endcomment %}
+      {% if edition_allowed %}
+      <a href="{{selected.get_edit_absolute_url}}" data-action="redirect">
+          {% widget_icon name='edit' label=_('Edit this view') size='listview-filter-action' %}
+      </a>
+      {% else %}
+      <a href="#" data-action="redirect" class="is-disabled">
+          {% widget_icon name='edit' label=edition_error size='listview-filter-action' %}
+      </a>
+      {% endif %}
+      {% if deletion_allowed %}
+      <a href="{% url 'creme_core__delete_hfilter' %}" data-action="delete">
+          {% widget_icon name='delete' label=_('Delete this custom view') size='listview-filter-action' %}
+          {% blockjsondata class='listview-action-data' %}{"data": {"id": "{{selected.id}}"}}{% endblockjsondata %}
+      </a>
+      {% else %}
+      <a href="#" data-action="delete" class="is-disabled">
+          {% widget_icon name='delete' label=edition_error size='listview-filter-action' %}
+      </a>
+      {% endif %}
      {% endwith %}
     {% endif %}
 </fieldset>
